[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
miette = { version = "7.0", features = ["fancy"] }
thiserror = "2.0.17"
clap = { version = "4.5", features = ["derive"] }
[lib]
name = "ferrite"
path = "src/lib.rs"
[[bin]]
name = "ferrite"
path = "src/main.rs"