[package]
name = "ferrite-json"
version = "0.1.0"
edition = "2021"
authors = ["awrped"]
description = "json validator that actually tells you how to fix your mistakes"
repository = "https://github.com/awrped/ferrite"
homepage = "https://github.com/awrped/ferrite"
readme = "README.md"
license = "MIT"
keywords = ["json", "validator"]
categories = ["parser", "tool"]

[dependencies]
serde_json = "1.0"
miette = { version = "7.0", features = ["fancy"] }
thiserror = "2.0.17"
clap = { version = "4.5", features = ["derive"] }
[lib]
name = "ferrite_json"
path = "src/lib.rs"
[[bin]]
name = "ferrite"
path = "src/main.rs"